# anchor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  drift_live.py  drift_live_result.json  overblock_bench.py  remind_test.py  violation_bench.py  violation_result_ADVERSARIAL.json  violation_result_nominal.json
docs/: DEMO.md  DESIGN.md  README.md
docs/research/: landscape-and-research.md
examples/: README.md  safe-yolo.anchor.toml
src/anchor/: __main__.py  audit.py  authoring.py  bench.py  budget.py  cache.py  cli.py  client.py  compile.py  config.py  control.py  daemon.py  discovery.py  feedback.py  guard.py  inject.py  install.py  ipc.py  llm.py  (+9 more)
tests/: test_audit.py  test_audit_wiring.py  test_authoring.py  test_bench.py  test_bench_drift.py  test_budget.py  test_cache.py  test_cli.py  test_cli_v12.py  test_client_fallback.py  test_compile_sugar.py  test_config.py  test_control.py  test_daemon_core.py  test_daemon_e2e.py  test_daemon_win.py  test_discovery.py  test_e2e_hooks.py  test_feedback.py  test_guard.py  test_guard_uses_client.py  test_inject.py  test_install.py  test_install_v11.py  test_ipc.py  test_llm.py  test_matcher_eval.py  test_matcher_paths.py  test_matcher_regex.py  test_migrate.py  test_packs.py  test_packs_v11.py  test_parity.py  test_protocol.py  test_redact.py  test_ruler.py  test_rules.py  test_smoke.py  test_subagent.py  test_tomlemit.py
(+4 files in other folders)
